# Redes_Estudo

./: README.md  redes.py  telnet.py
deposito-de-arquivo-com-replicacao-main/: arquivos.json  pyproject.toml  settings.toml  teste.txt
deposito-de-arquivo-com-replicacao-main/deposito_de_arquivo_com_replicacao/: client.py  config.py  enums.py  main.py  mirror.py  protocolo.py  server.py  server_client.py  utils.py
