[tool.poetry]
name = "deposito-de-arquivo-com-replicacao"
version = "0.1.0"
description = ""
authors = ["Andre Walker <andre.walkermo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "^3.1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
